--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://widfield.github.io",
   "name": "tuka-venue-form",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
